tests/ui-fulldeps/session-diagnostic/diagnostic-derive-doc-comment-field.stderr
error[E0277]: the trait bound `NotIntoDiagnosticArg: IntoDiagnosticArg` is not satisfied
  --> $DIR/diagnostic-derive-doc-comment-field.rs:37:10
   |
LL | #[derive(Diagnostic)]
   |          ---------- required by a bound introduced by this call
...
LL |     arg: NotIntoDiagnosticArg,
   |          ^^^^^^^^^^^^^^^^^^^^ the trait `IntoDiagnosticArg` is not implemented for `NotIntoDiagnosticArg`
   |
   = help: normalized in stderr
note: required by a bound in `DiagnosticBuilder::<'a, G>::set_arg`
  --> $COMPILER_DIR/rustc_errors/src/diagnostic_builder.rs:LL:CC
   = note: this error originates in the macro `forward` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotIntoDiagnosticArg: IntoDiagnosticArg` is not satisfied
  --> $DIR/diagnostic-derive-doc-comment-field.rs:47:10
   |
LL | #[derive(Subdiagnostic)]
   |          ------------- required by a bound introduced by this call
...
LL |     arg: NotIntoDiagnosticArg,
   |          ^^^^^^^^^^^^^^^^^^^^ the trait `IntoDiagnosticArg` is not implemented for `NotIntoDiagnosticArg`
   |
   = help: normalized in stderr
note: required by a bound in `Diagnostic::set_arg`
  --> $COMPILER_DIR/rustc_errors/src/diagnostic.rs:960:5

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
